# gamification-impl/src/main/java/ch/heigvd/amt/gamification/api/endpoints/RulesApiController.java
@@ -2,8 +2,7 @@ package ch.heigvd.amt.gamification.api.endpoints;
 
 import ch.heigvd.amt.gamification.api.EventsApi;
 import ch.heigvd.amt.gamification.api.RulesApi;
-import ch.heigvd.amt.gamification.api.model.Event;
-import ch.heigvd.amt.gamification.api.model.Rule;
+import ch.heigvd.amt.gamification.api.model.*;
 import ch.heigvd.amt.gamification.entities.ApplicationEntity;
 import ch.heigvd.amt.gamification.entities.EventEntity;
 import ch.heigvd.amt.gamification.entities.RuleEntity;
@@ -33,7 +32,7 @@ public class RulesApiController implements RulesApi {
     @ResponseStatus(HttpStatus.CREATED)
     public ResponseEntity<Void> createRule(@ApiParam(value = "", required = true) @Valid @RequestBody Rule rule) {
         RuleEntity newRuleEntity = toRuleEntity(rule);
-        //newRuleEntity.setApplication((ApplicationEntity) request.getAttribute("applicationEntity"));
+        newRuleEntity.setApplication((ApplicationEntity) request.getAttribute("applicationEntity"));
         ruleRepository.save(newRuleEntity);
 
         Long id = newRuleEntity.getId();
@@ -47,19 +46,27 @@ public class RulesApiController implements RulesApi {
 
     private RuleEntity toRuleEntity(Rule rule) {
         RuleEntity entity = new RuleEntity();
-        entity.setType(rule.getType());
-        entity.setQuantity(rule.getQuantity());
-        entity.setAwardBadge(rule.getAwardBadge());
-        entity.setAwardPoints(rule.getAwardPoints());
+        entity.setName(rule.getName());
+        entity.setType(rule.getIf().getRuleType());
+        entity.setAwardBadge(rule.getThen().getAwardBadge());
+        entity.setAwardPoints(rule.getThen().getAwardPoints().getPointScale());
         return entity;
     }
 
     private Rule toRule(RuleEntity entity) {
         Rule rule = new Rule();
-        rule.setType(entity.getType());
-        rule.setQuantity(entity.getQuantity());
-        rule.setAwardBadge(entity.getAwardBadge());
-        rule.setAwardPoints(entity.getAwardPoints());
+        rule.setName(entity.getName());
+
+        RuleIf ruleIf = new RuleIf();
+        rule.setIf(ruleIf.ruleType(entity.getType()));
+
+        RuleThen ruleThen = new RuleThen();
+        ruleThen.setAwardBadge(entity.getAwardBadge());
+        RuleThenAwardPoints ruleThenAwardPoints = new RuleThenAwardPoints();
+        ruleThenAwardPoints.setPointScale(entity.getAwardPoints());
+
+        ruleThenAwardPoints.setAmount(entity.getAmount());
+        ruleThen.setAwardPoints(ruleThenAwardPoints);
         return rule;
     }
 }
