# gamification-impl/src/main/java/ch/heigvd/amt/gamification/entities/RuleEntity.java
@@ -14,8 +14,12 @@ public class RuleEntity implements Serializable {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private long id;
 
+    private String name;
     private String type;
-    private BigDecimal quantity;
     private String awardBadge;
     private String awardPoints;
+    private BigDecimal amount;
+
+    @ManyToOne
+    private ApplicationEntity application; //TODO application->applicationEntity
 }
